[package]
name = "floppy-rust-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy_rapier2d = { version = "*",  features = [ "simd-stable", "debug-render-2d" ]}
bevy_turborand = "0.5.0"

[workspace]
resolver = "2" 